Fixed entry-input-box overflow

--- a/app/styles/generic/_common.sass
+++ b/app/styles/generic/_common.sass
@@ -22,6 +22,7 @@ $BORDER_HEAVY: 1px solid #aaa
     border-radius: .2rem
     background-color: white
     border: $BORDER_MEDIUM
+    overflow: hidden
 //
 
 
